<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/home"

            />
        <item
            android:id="@+id/favoriteFragment"
            android:title="@string/favorite"
            android:icon="@drawable/favorite"
            />
        <item
            android:id="@+id/searchFragment"
            android:title="@string/search"
            android:icon="@drawable/search"
            />
        <item
            android:id="@+id/planFragment"
            android:title="@string/yourPlan"
            android:icon="@drawable/event"
            />
        <item
            android:id="@+id/logOutFragment"
            android:title="@string/logout"
            android:icon="@drawable/logout"
            />
    </group>
</menu>