<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Meal Image -->
        <ImageView
            android:id="@+id/imgMealThumb"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"

            android:layout_marginBottom="16dp" />

        <!-- Meal Name Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/txtTitleMealName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mealName"
                android:textColor="@color/green"
                android:textSize="23dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMealName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/lightBlack"
                android:layout_marginStart="8dp" />
        </LinearLayout>


        <!-- Meal Category Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/txtTitleMealCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/green"
                android:textSize="23dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMealCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/lightBlack"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- Meal Area Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/txtTitleMealArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textColor="@color/green"
                android:textSize="23dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMealArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/lightBlack"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- Meal Tags Section -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/igredientTitletxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textColor="@color/green"
                android:textSize="23dp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingrediantsRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <!-- Meal Instructions Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/txtTitleMealInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/instructions"
                android:textColor="@color/green"
                android:textSize="23dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMealInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="20dp"
                android:textColor="@color/lightBlack"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <!-- YouTube Link Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/txtTitleMealYoutube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:textColor="@color/green"
                android:textSize="23dp"
                android:textStyle="bold" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>



    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/calendar_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/calendar"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                />
            <Spinner

                android:id="@+id/spinnerDayOfWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/days_of_week"
                android:layout_marginBottom="8dp"
                />
            <Button
                android:id="@+id/addToPlanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addToYourPlan"
                android:textSize="15dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <Button
                android:id="@+id/AddToFavDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addToFav"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/gray"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
