<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.search.SearchFragment">

    <TextView
        android:id="@+id/searchBytxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchBy"
        app:layout_constraintEnd_toStartOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="28dp"
        android:textSize="20dp"
        android:textColor="@color/green"
        />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchBytxt"

        >

        <RadioButton
            android:id="@+id/categoryRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/byCategory"
            android:textColor="@color/green"
            android:textSize="17dp"
            android:defaultFocusHighlightEnabled="true"
            />

        <RadioButton
            android:id="@+id/countryRadioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/green"
            android:textSize="17dp"
            />

        <RadioButton
            android:id="@+id/ingredientRadioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredient"
            android:textColor="@color/green"
            android:textSize="17dp"
            />
    </RadioGroup>

    <SearchView
        android:id="@+id/searchViewtxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <ImageView
        android:id="@+id/sad"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/sentiment"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/matchtxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/matchtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/sad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResaultRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/fragment_card"
        app:layout_constraintTop_toTopOf="@id/searchViewtxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>